--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>グランディール<br>予約フォーム</h1>
+        <h1>テンプレートフォームJ<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -196,83 +196,63 @@
 
         <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">初回</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('Laphos')">ラフォス&リンパ</button>
-            <button type="button" onclick="showMenu('allhands')">オールハンド</button>
-            <button type="button" onclick="showMenu('DryHeadSpa')">ドライヘッドスパ</button>
-            <button type="button" onclick="showMenu('custommade')">オーダーメイドプラン</button>
+            <button type="button" onclick="showMenu('male')">カイロプラクティック</button>
+            <button type="button" onclick="showMenu('female')">美容カイロエステ</button>
         </div>
 
-        <div id="Laphos" class="menu-section">
-            <label>◆ラフォス&リンパ◆</label>
+        <div id="male" class="menu-section">
+            <label>◆ブライダルコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術90分(所要時間:約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術120分(所要時間:約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術150分(所要時間:約210分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">初回</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">2回目以降</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">18歳未満</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">12歳未満</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">8歳未満</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">産後ケア</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ドライヘッドスパ施術75分</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">クイックドライヘッドスパ施術30分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フェイシャル施術60分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋10分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋20分</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">パーソナルトレーニング</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～顔</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～ウエストはみ肉</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～二の腕の振り袖さよなら</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～背中すっきり</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～おしり・太ももすっきり</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～足首・アキレス腱すっきり</button>
             </div>
         </div>
 
-        <div id="allhands" class="menu-section">
-            <label>◆オールハンド◆</label>
+        <div id="female" class="menu-section">
+            <label>◆シェービングコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術60分(所要時間:約120分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術90分(所要時間:約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術120分(所要時間:約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">頭蓋骨ヘッドスパ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">小顔調整＋たるみ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">小顔調整＋シミ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">小顔調整＋にきび</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">小顔調整＋むくみ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">骨盤矯正＋ヒップアップ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">骨盤矯正＋ウエストくびれ</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">骨盤矯正＋O脚</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">骨盤矯正＋ダイエット</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">骨盤矯正＋小顔調整</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ドライヘッドスパ施術75分</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">クイックドライヘッドスパ施術30分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フェイシャル施術60分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋10分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋20分</button>
-            </div>
-        </div>
-
-        <div id="DryHeadSpa" class="menu-section">
-            <label>◆ドライヘッドスパ◆</label>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ施術75分<br>(所要時間:約130分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">背中ラフォス&ドライヘッドスパ施術120分<br>(所要時間:約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ&フェイシャル施術120分<br>(所要時間:180分)</button>
-            </div>
-            <label>オプション</label>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ドライヘッドスパ施術75分</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">クイックドライヘッドスパ施術30分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フェイシャル施術60分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋10分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋20分</button>
-            </div>
-        </div>
-
-        <div id="custommade" class="menu-section">
-            <label>◆オーダーメイドプラン◆</label>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術90分(所要時間:約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術120分(所要時間:約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術150分(所要時間:210分)</button>
-            </div>
-            <label>オプション</label>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ドライヘッドスパ施術75分</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">クイックドライヘッドスパ施術30分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フェイシャル施術60分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋10分</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">追加ラフォス＋20分</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">パーソナルトレーニング</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～顔</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～ウエストはみ肉</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～二の腕の振り袖さよなら</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～背中すっきり</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～おしり・太ももすっきり</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">むくみケア～足首・アキレス腱すっきり</button>
             </div>
         </div>
 
@@ -511,7 +491,7 @@ if (!formData.name || !formData.phone || !formData.selectedSymptom) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -576,11 +556,12 @@ function updateCalendar(availability, businessDays) {
     const table = calendar.querySelector('table tbody');
 
 const times = [
-        '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+        '10:00', '10:30', '11:00', '11:30',
         '12:00', '12:30', '13:00', '13:30',
         '14:00', '14:30', '15:00', '15:30',
         '16:00', '16:30', '17:00', '17:30',
-        '18:00'
+        '18:00', '18:30', '19:00', '19:30',
+        '20:00'
 ];
 
     if (table.rows.length === 0) {
@@ -655,33 +636,17 @@ for (let i = 0; i < 7; i++) {
             return acc;
         }, 0);
 
-// 12:00 - 13:59 を✕に設定（土曜日のみ）
+// 12:00 - 12:59 と 17:00 - 18:29 と 19:01 - 20:00 ✕に設定（全ての曜日）
 if (
-    (slotStart.getDay() === 6) && // 土曜日のみ
     (
-        // 08:00 - 09:00 の時間帯
-        (slotStart.getHours() === 8 && slotStart.getMinutes() >= 0) || // 08:00以降
-        (slotStart.getHours() === 9 && slotStart.getMinutes() < 60) || // 09:00まで
-        // 16:00 - 18:00 の時間帯
-        (slotStart.getHours() === 16 && slotStart.getMinutes() >= 0) || // 16:00以降
-        (slotStart.getHours() === 17 && slotStart.getMinutes() < 60)  // 17:00から18:00まで
-    )
-) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-    cell.setAttribute('data-date', slotStart.toISOString());
-    continue;
-}
-// 08:00 - 09:00 と 16:00 - 18:00✕に設定（日曜日のみ）
-if (
-    (slotStart.getDay() === 0) && // 日曜日のみ
-    (
-        // 08:00 - 09:00 の時間帯
-        (slotStart.getHours() === 8 && slotStart.getMinutes() >= 0) || // 08:00以降
-        (slotStart.getHours() === 9 && slotStart.getMinutes() < 60) || // 09:00まで
-        // 16:00 - 18:00 の時間帯
-        (slotStart.getHours() === 16 && slotStart.getMinutes() >= 0) || // 16:00以降
-        (slotStart.getHours() === 17 && slotStart.getMinutes() < 60)  // 17:00から18:00まで
+        // 12:00 - 12:59 の時間帯
+        (slotStart.getHours() === 12 && slotStart.getMinutes() >= 0 && slotStart.getMinutes() < 60) || 
+        // 17:00 - 18:29 の時間帯
+        (slotStart.getHours() === 17 && slotStart.getMinutes() >= 0) || 
+        (slotStart.getHours() === 18 && slotStart.getMinutes() < 30) || 
+        // 19:01 - 20:00 の時間帯
+        (slotStart.getHours() === 19 && slotStart.getMinutes() > 0) || 
+        (slotStart.getHours() === 20 && slotStart.getMinutes() === 0)
     )
 ) {
     cell.textContent = '✕';
@@ -757,8 +722,8 @@ if (
 
     // ×と×の間のセル数が3未満の場合、その間のセルを×にする部分の後に以下を追加
     for (let i = 0; i < 7; i++) {
-        const twentyOClockRow = times.indexOf('17:30');
-        const twentyOneOClockRow = times.indexOf('18:00');
+        const twentyOClockRow = times.indexOf('18:30');
+        const twentyOneOClockRow = times.indexOf('19:00');
 
         for (let j = twentyOClockRow; j < times.length; j++) {
             const cell = table.rows[j].cells[i + 1];
