--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: ''
+                liffId: '・所要時間：NaN分'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
