--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.irradiationsCount) {
+            if (!formData.name || !formData.phone || !formData.manorwomanCount) {
                 alert('お名前・電話番号・メニューすべてご記入ください。');
                 return;
             }
@@ -1146,7 +1146,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご性別：${formData.manorwomanCount}\nご来店回数：${formData.visitCount}\nメニュー：${formData.irradiationsCount},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご性別：${formData.manorwomanCount}\nご来店回数：${formData.visitCount}\nメニュー：${formData.irradiationsCount},${formData.selectedSymptom},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
