--- a/index.html
+++ b/index.html
@@ -388,7 +388,6 @@
         <div id="facial" class="menu-section">
             <p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目2</p>
             <div class="symptoms" id="irradiations11">
-                <button type="button" onclick="selectSymptom(this)">とりあえず予約:フェイシャル</button>
                 <button type="button" onclick="selectSymptom(this)">小顔輪郭矯正</button>
                 <button type="button" onclick="selectSymptom(this)">ピーリングメニュー</button>
                 <button type="button" onclick="selectSymptom(this)">毛穴ハイドラメニュー</button>
@@ -403,6 +402,8 @@
                     ◆小顔輪郭矯正◆<br>コースをお選びください</p>
             </div>
             <div class="symptoms" id="irradiations22">
+                <button type="button" id="irradiations1-0" onclick="selectirradiations(this)"
+                    data-price="15000">とりあえず予約:フェイシャル</button>
                 <button type="button" id="irradiations1-1" onclick="selectirradiations(this)"
                     data-price="15000">小顔矯正リフトアップコース</button>
                 <button type="button" id="irradiations1-2" onclick="selectirradiations(this)"
@@ -422,6 +423,8 @@
                     ◆ピーリングメニュー◆<br>コースをお選びください</p>
             </div>
             <div class="symptoms" id="irradiations33">
+                <button type="button" id="irradiations2-0" onclick="selectirradiations(this)"
+                    data-price="15000">とりあえず予約:フェイシャル</button>
                 <button type="button" id="irradiations2-1" onclick="selectirradiations(this)"
                     data-price="15000">強炭酸・ガリレオピーリング</button>
                 <button type="button" id="irradiations2-2" onclick="selectirradiations(this)"
@@ -1138,7 +1141,7 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.manorwomanCount) {
+            if (!formData.name || !formData.phone || !formData.irradiationsCount) {
                 alert('お名前・電話番号・メニューすべてご記入ください。');
                 return;
             }
@@ -1146,7 +1149,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご性別：${formData.manorwomanCount}\nご来店回数：${formData.visitCount}\nメニュー：${formData.irradiationsCount},${formData.selectedSymptom},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご性別：${formData.manorwomanCount}\nご来店回数：${formData.visitCount}\nメニュー：${formData.irradiationsCount},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
