--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
             <label
                 style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆よもぎ蒸し・オイルリンパ◆<br>コースをお選びください</label>
             <div class="symptoms">
-                <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約:よもぎ蒸し・オイルリンパ</button>
+                <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">とりあえず予約:<br>よもぎ蒸し・オイルリンパ</button>
                 <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">発汗 ダイエット
                     むくみ改善</button>
                 <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">美肌効果
