--- a/index.html
+++ b/index.html
@@ -990,9 +990,9 @@
             // クリックされたボタンを選択状態にして 'active' を追加するよ💖
             element.classList.add('active');
 
-            // ボタンのテキスト（コース名）を取得して変数に保存するの📋
-            const selectedCourse = element.textContent;  // 選ばれたコース名をゲット
-            irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
+    // ボタンのテキスト（コース名）を取得して、改行タグを削除するの📋
+    let selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, '');  // <br>タグを削除する
+    irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
 
             // ボタンに隠されてるデータ属性 `data-price` から価格を取得するよ💸
             const selectedPrice = parseInt(element.getAttribute('data-price'), 10);  // 値段は数値に変換して保存
