--- a/index.html
+++ b/index.html
@@ -990,8 +990,9 @@ function selectirradiations(element) {
     // クリックされたボタンを選択状態にして 'active' を追加するよ💖
     element.classList.add('active');
 
-    // ボタンのテキスト（コース名）を取得して改行タグを削除するよ📋
-    let selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, ""); // 改行タグを削除してつなげる
+    // ボタンのテキスト（コース名）を取得して変数に保存するの📋
+    let selectedCourse = element.innerHTML;  // 選ばれたコース名をゲット
+    selectedCourse = selectedCourse.replace(/<br>/g, '');  // <br> を削除してテキストを繋げる
 
     irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
 
