--- a/index.html
+++ b/index.html
@@ -990,11 +990,10 @@ function selectirradiations(element) {
     // クリックされたボタンを選択状態にして 'active' を追加するよ💖
     element.classList.add('active');
 
-    // ボタンのテキスト（コース名）を取得して変数に保存するの📋
-    let selectedCourse = element.innerHTML;  // 選ばれたコース名をゲット
-    selectedCourse = selectedCourse.replace(/<br>/g, '');  // <br> を削除してテキストを繋げる
+    // ボタンのテキスト（コース名）を innerHTML で取得して <br> を削除し、1行にする
+    let selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, '');  // <br> をすべて削除
 
-    irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
+    irradiationsCount = selectedCourse.trim();  // コース名を `irradiationsCount` に保存して、空白も削除
 
     // ボタンに隠されてるデータ属性 `data-price` から価格を取得するよ💸
     const selectedPrice = parseInt(element.getAttribute('data-price'), 10);  // 値段は数値に変換して保存
