--- a/index.html
+++ b/index.html
@@ -990,10 +990,10 @@ function selectirradiations(element) {
     // クリックされたボタンを選択状態にして 'active' を追加するよ💖
     element.classList.add('active');
 
-    // ボタンのテキスト（コース名）を innerHTML で取得して <br> を削除し、1行にする
-    let selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, '');  // <br> をすべて削除
+    // ボタンのテキストを取得し、<br>タグを削除してから取得する
+    let selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, '').trim();  // <br> タグを削除しつつ、不要なスペースも削除
 
-    irradiationsCount = selectedCourse.trim();  // コース名を `irradiationsCount` に保存して、空白も削除
+    irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
 
     // ボタンに隠されてるデータ属性 `data-price` から価格を取得するよ💸
     const selectedPrice = parseInt(element.getAttribute('data-price'), 10);  // 値段は数値に変換して保存
