--- a/index.html
+++ b/index.html
@@ -1147,23 +1147,23 @@ function selectirradiations(element) {
             updateDisplayInfo();
         }
 
-        function submitForm() {
-            const formData = {
-                name: document.getElementById('name').value,
-                phone: document.getElementById('phone').value,
-                visitCount: visitCount,
-                manorwomanCount: manorwomanCount,
-                selectedSymptom: selectedSymptom,
-                irradiationsCount: irradiationsCount,
-                dates: [selectedFullDate],
-                message: document.getElementById('message').value
-            };
+function submitForm() {
+    const formData = {
+        name: document.getElementById('name').value,
+        phone: document.getElementById('phone').value,
+        visitCount: visitCount,
+        manorwomanCount: manorwomanCount,
+        selectedSymptom: selectedSymptom,
+        irradiationsCount: irradiationsCount.join(''),  // 配列を文字列として連結
+        dates: [selectedFullDate],
+        message: document.getElementById('message').value
+    };
 
-            // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.irradiationsCount) {
-                alert('お名前・電話番号・メニューすべてご記入ください。');
-                return;
-            }
+    // フォームデータのチェック
+    if (!formData.name || !formData.phone || !formData.irradiationsCount) {
+        alert('お名前・電話番号・メニューすべてご記入ください。');
+        return;
+    }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
