--- a/index.html
+++ b/index.html
@@ -990,8 +990,8 @@ function selectirradiations(element) {
     // クリックされたボタンを選択状態にして 'active' を追加するよ💖
     element.classList.add('active');
 
-    // ボタンのテキストを取得して、改行や余計な空白を取り除く📋
-    const selectedCourse = element.textContent.replace(/\s+/g, ' ').trim();  // 改行や余計な空白を削除
+    // ボタンのHTMLテキストを取得して、<br>タグを空白に置き換えて1行にする📋
+    const selectedCourse = element.innerHTML.replace(/<br\s*\/?>/gi, ' ').replace(/\s+/g, ' ').trim();
     irradiationsCount = selectedCourse;  // コース名を `irradiationsCount` に保存
 
     // ボタンに隠されてるデータ属性 `data-price` から価格を取得するよ💸
